<resources>
    <string name="app_name">SoundShare</string>
    <string name="title_activity_connection">Connection</string>
    <string name="connection_button">Log in</string>
    <string name="welcome_message1">Welcome to</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_button">Register</string>
    <string name="log_out">Log out</string>
    <string name="username">Username</string>
    <string name="titles">titles</string>
    <string name="friendEmail">Add your friend\'s email</string>
    <string name="title_activity_maps">Map</string>
</resources>
